kubernetes/apps/default/photoprism/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: photoprism
  namespace: default
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: PhotoPrism
    gethomepage.dev/group: Photos
    gethomepage.dev/icon: photoprism.png
    gethomepage.dev/description: Manage Photos
spec:
  parentRefs:
    - name: internal
      namespace: networking
      sectionName: https
  hostnames: ["portfolio.${SECRET_DOMAIN}"]
  rules:
    - backendRefs:
        - name: photoprism
          port: 2342
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: photoprism-public
  namespace: default
spec:
  parentRefs:
    - name: external
      namespace: networking
      sectionName: https
    - name: internal
      namespace: networking
      sectionName: https
  hostnames: ["portfolio.${PUBLIC_DOMAIN}"]
  rules:
    - backendRefs:
        - name: photoprism
          port: 2342
